--- a/src/static/index.html
+++ b/src/static/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Peter Morawiec"/>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
     <!-- lock version must be > 10.22 to use cross origin auth -->
-    <script src="http://cdn.auth0.com/js/lock/10.23/lock.min.js"></script>
+    <script src="https://cdn.auth0.com/js/auth0/8.10.1/auth0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jsrsasign/7.2.1/jsrsasign-all-min.js"></script>
   </head>
   <body>
